membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>latihhan git</title>
 </head>
 <body>
+    <header>disini adalah header</header>
     <h1>company profile</h1>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, autem odio. Dicta ipsam corporis architecto culpa mollitia nisi. Mollitia reiciendis unde molestiae eaque minus, dolorum iusto iure quam id adipisci.
-        
+
+        <footer>ini adalah footer</footer>
     </div>
 </body>
 </html>
