--- a/contact-us.html
+++ b/contact-us.html
@@ -16,6 +16,7 @@
     <h1>company profile</h1>
     <div>Lini adalah halaman kontak kami</div>
 
+    <div>ada baris di 19</div>
         <footer>ini adalah footer</footer>
     </div>
 </body>
