--- a/contact-us.html
+++ b/contact-us.html
@@ -16,6 +16,8 @@
     <h1>company profile</h1>
     <div>Lini adalah halaman kontak kami</div>
 
+    <form action=""></form>
+    
         <footer>ini adalah footer</footer>
     </div>
 </body>
